# ascstudymonitor

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  README.rst  TODO  deploy.sh  docker-compose-dev.yaml  docker-compose.yaml  nginx-dev.conf  nginx.conf  package.json  pyproject.toml  pytest.ini  schema.graphql
.ebextensions/: redis.config
.github/workflows/: backend-unit-tests.yml  client-e2e-tests.yml  client-unit-tests.yml  codeql-analysis.yml  deploy-staging.yml  node.js.yml  test_deploy_stage.yml  unit-tests.yml
ascmonitor/: __init__.py  app.py  bib_cache.py  config.py  document_cache.py  document_store.py  event_store.py  events.py  mendeleur.py  post_queue.py  poster.py  sitemap.py  tasks.py
ascmonitor/channels/: __init__.py  twitter.py
backend/: .pylintrc  pyproject.toml  schema.graphql
backend/ascmonitor/: __init__.py  app.py  config.py  document_cache.py  document_store.py  event_store.py  events.py  filter_list.py  globals.py  graphql.py  lock.py  mendeleur.py  ngram_store.py  post_queue.py  poster.py  publication.py  publication_store.py  search_engine.py  types.py
backend/ascmonitor/channels/: __init__.py  channel.py  exceptions.py  post.py  twitter.py
backend/sitemap/: robots.txt  sitemap.xml
backend/tests/: conftest.py  test_document_cache.py  test_document_store.py  test_event_store.py  test_graphql.py  test_ngram_store.py  test_post_queue.py  test_poster.py  test_publication.py  test_publication_store.py  test_twitter.py
backer-upper/: Dockerfile  backer-upper.sh
cache-warmer/: Dockerfile
client/: .gitignore  apollo.config.js  jest.init.js  package.json  postcss.config.js  stylelint.config.js  tailwind.config.js  vue.config.js  wallaby.js
client-next/: README.md  package.json  postcss.config.js  vite.config.js
client-next/scripts/: vue-apollo-patch.js
client-next/src/: App.vue  events.js  events.ts  filters.ts  graphql.js  index.css  main.js  main.ts  shim.js  symbols.ts  vue-apollo.js
client-next/src/components/: BackButton.vue  Bubbles.vue  HelloWorld.vue  HeroWrap.vue  InfiniteScrollingWaypoint.vue  Keymap.vue  Logo.vue  (+3 more)
client/public/: dynamic_meta.html  index.html  robots.txt  sitemap.xml  static_meta.html
client/src/: App.vue  constants.js  graph.json  main.js  possibleTypes.json  vue-apollo.js
cronicle/: Dockerfile
cronicle/scripts/: backer-upper.sh  send-post.py
design_files/: asc_redesign_2_1_A.xd
etc/: gunicorn.py  nginx-dev.conf
foxglove/: README.md  package.json  server.js  thumbnail.ejs
frontend/: babel.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
hooks/: build
letsencrypt/nginx/: nginx.conf
server/: Dockerfile  Routes.md
static/: app.js  datatable.js  documents.js  index.html  menu.js  mindblower.js  style.css  ui.js  view.js
static/mindblower/: mindblower.css  mindblower.js
templates/: stub.html  tags.sample.html
tests/: conftest.py  test_document_cache.py
(+180 files in other folders)
