[tool.poetry]
name = "ASCMonitor"
version = "1.0.0"
description = ""
authors = ["Felix Peppert <felix.peppert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.5"
flask = "^1.1"
flask-cors = "^3.0"
gunicorn = "^20"
sentry-sdk = "^0.14"
pymongo = "^3.10.1"
tweepy = "^3.8.0"
mendeley = {git = "https://github.com/membranepotential/mendeley-python-sdk.git"}
python-slugify = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pylint = "^2.5.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
