[tool.poetry]
name = "ASCMonitor"
version = "3.0.0"
description = ""
authors = ["Felix Peppert <felix.peppert@gmail.com>"]

[tool.poe.tasks]
mypy = "mypy ascmonitor"
pylint = "pylint ascmonitor"
lint = {sequence = ["mypy", "pylint"], ignore_fail = true}
test = "pytest -vv -s"

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20"
uvicorn = "^0.11.8"
starlette = "^0.13.8"
ariadne = "^0.12.0"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
sentry-sdk = "^0"
pymongo = "^3.11"
requests = "^2.5"
mendeley = {git = "https://github.com/membranepotential/mendeley-python-sdk.git"}
tweepy = "^3.8.0"
attrs = "^19.3.0"
python-dateutil = "^2.8.1"
python-slugify = "^4.0.0"
pyhumps = "^1.6.1"
nltk = "^3.5"
requests_oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.5.2"
mypy = "^0.770"
mongomock = "^3.19.0"
ipdb = "^0.13.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future"
]